# api-metatrader5

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: deploy-operacao.md  flask-edge-integration.md  google-sheets-test.md
scripts/: check-gateway.ps1  diagnose-machine.ps1  install-gateway-service.ps1  mt5-gateway-common.ps1  remove-gateway-service.ps1  restart-gateway.ps1  service-status.ps1  start-gateway.ps1  status-gateway.ps1  stop-gateway.ps1  test-quotes-batch.ps1
src/api_metatrader5/: app.py  main.py
src/api_metatrader5/api/: dependencies.py
src/api_metatrader5/api/routes/: health.py  metrics.py  orders.py  quotes.py  symbols.py
src/api_metatrader5/core/: config.py  errors.py  logging.py
src/api_metatrader5/schemas/: market.py  orders.py
src/api_metatrader5/security/: hmac_auth.py
src/api_metatrader5/services/: btg_trader_desk_client.py  market_data.py  market_data_client.py  monitoring.py  mt5_client.py  order_service.py
tests/: test_btg_trader_desk_client.py  test_hmac_auth.py  test_mt5_client.py  test_quotes_api.py
